<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backgroundView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gameSelection">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        android:weightSum="3"
        android:fontFamily="@font/josefinsans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/connectButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="2dp"
            android:onClick="gameClicked"
            android:tag="CONNECT"
            android:fontFamily="@font/josefinsans"
            android:text="@string/connect"
            android:textColor="@android:color/background_light"
            android:background="@drawable/button"
            android:radius="10dp"
            android:textSize="50sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/matchButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:onClick="gameClicked"
            android:tag="MATCH"
            android:fontFamily="@font/josefinsans"
            android:text="@string/match"
            android:textColor="@android:color/background_light"
            android:background="@drawable/button2"
            android:textSize="50sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/guessButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="2dp"
            android:onClick="gameClicked"
            android:tag="GUESS"
            android:fontFamily="@font/josefinsans"
            android:text="@string/Guess"
            android:textColor="@android:color/background_light"
            android:background="@drawable/button3"
            android:textSize="50sp"
            android:textStyle="bold|italic" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>